src/tests/fixtures/interfaces/tag/ImplementsTagWithoutTypeOrInterface.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @gqlImplements Node */
function hello() {
  return "world";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/interfaces/tag/ImplementsTagWithoutTypeOrInterface.invalid.ts:1:6 - error: `@gqlImplements` is not a valid Grats tag. Valid tags are: `@gqlType`, `@gqlField`, `@gqlScalar`, `@gqlInterface`, `@gqlEnum`, `@gqlUnion`, `@gqlInput`, `@gqlContext`.

1 /** @gqlImplements Node */
       ~~~~~~~~~~~~~
